--- a/landing/styles.css
+++ b/landing/styles.css
@@ -11,5 +11,18 @@
 .showcase-img {
   position: relative;
   max-width: 80%;
-  margin: 3rem auto -12rem;
+  margin: 3rem auto ;
+  /* -12rem (above, after auto) */
+}
+
+.section-a {
+  background-image: url('images/pattern.jpg');
+  background-size: cover;
+  padding-bottom: 5rem;
+}
+
+.section-a .fa {
+  font-size: 40px;
+  margin-bottom: .5rem;
+  margin-top: 2rem;
 }
