--- a/landing/styles.css
+++ b/landing/styles.css
@@ -40,9 +40,17 @@
   background-image: url('images/pattern.jpg');
   background-size: cover;
   margin-top: 4rem;
+  padding-top: 4rem;
   padding-bottom: 5rem;
 }
 
 .section-c .section-description {
   margin-bottom: 4rem;
+}
+
+@media(min-width: 750px) {
+  .showcase-heading {
+    font-size: 3.0rem;
+    padding-top: 11rem;
+  }
 }
